collectd (5.1.0-3) UNRELEASED; urgency=low

  * debian/patches/migrate-4-5-df.dpatch, debian/collectd-core.postinst:
    - Added patch to fix the migration of 'df' values in migrate-4-5.px;
      thanks to 'markuskaindl' for reporting this on IRC.
    - Pass --rrdfilter and --rrdtool parameters to migrate-4-5.px in order to
      let the script find those binaries/scripts.
    (Closes: #681363)

 -- Sebastian Harl <tokkee@debian.org>  Thu, 12 Jul 2012 18:57:04 +0200

collectd (5.1.0-2) unstable; urgency=low

  * debian/collectd-core.postinst:
    - Don't create unused temp. directory.
  * debian/control, debian/rules:
    - Build depend on libmodbus-dev and enabled modbus plugin. 5.1 now
      supports libmodbus 3; thanks to Ivo De Decker for reporting this
      (Closes: #639796).
  * debian/po:
    - Updated Swedish debconf translation; thanks to Martin Bagge
      (Closes: #677842).
    - Added Slovak debconf translation; thanks to 'helix84'
      (Closes: #677902).
    - Updated Danish debconf translation; thanks to Joe Dalton
      (Closes: #677908).
    - Updated Czech debconf translation; thanks to Martin Šín
      (Closes: #677949).
    - Updated Russian debconf translation; thanks to Yuri Kozlov
      (Closes: #678016).
    - Updated Portuguese debconf translation; thanks to Américo Monteiro
      (Closes: #678048).
    - Updated Polish debconf translation; thanks to Michał Kułach
      (Closes: #678157).
    - Updated Galician debconf translation; thanks to Jorge Barreiro
      (Closes: #678467).
    - Updated French debconf translation; thanks to Steve Petruzzello
      (Closes: #678614).
    - Updated Spanish debconf translation; thanks to Omar Campagne
      (Closes: #679281).
  * debian/collectd-core.collectd.init.d:
    - Source /lib/lsb/init-functions in order to make systemd work in
      compatibility mode; thanks to Michael Stapelberg for reporting this
      (Closes: #679544).