@@ -6,6 +6,13 @@ collectd (5.1.0-3) UNRELEASED; urgency=low
     - Pass --rrdfilter and --rrdtool parameters to migrate-4-5.px in order to
       let the script find those binaries/scripts.
     (Closes: #681363)
+  * debian/collectd-core.collectd.init.d:
+    - Catch disabled state in start and restart and don't exit with an error
+      status. Amongst others, this fixes an upgrade of collectd when the
+      daemon is disabled. Thanks to Florian Ernst for reporting this and
+      Evgeni Golov for providing (an early) patch (Closes: #681216).
+    - Don't use 'set -e' and 'exit 0' (at the end) in order to let return
+      statuses propagate correctly. (cf. #681216)
 
  -- Sebastian Harl <tokkee@debian.org>  Thu, 12 Jul 2012 18:57:04 +0200
 
